feat(api): price the portfolio from stored quotes, not live SIX calls
Building a portfolio used to issue one synchronous SIX call per instrument
inside the user's request. A vendor that accepted the connection and then
went quiet would pin a Tomcat thread per position, and a slow SIX made
every page slow — including ones with nothing to do with investments. The
SIX client it called was also a dead end: its endpoint path was guessed
and never returned anything, so the price silently fell back to the
purchase price and the portfolio showed a gain of exactly 0.00.

Quotes now come from instrument_price in Postgres, filled by a nightly job
over the handful of ISINs users actually hold (SIX cannot batch — verified).
The read path touches only the database, so an unreachable vendor degrades
the answer instead of stalling the request. SixQuoteAdapter fetches from
the movie.json endpoint that actually exists; a zero or negative close is
rejected as "no quote" rather than flowing in as a real value.

The silent fallback is now visible. Every position carries priceSource
(MARKET / MANUAL / PURCHASE), the trading day the price belongs to, a stale
flag, and the currency the value is actually in — never defaulted to CHF.
PURCHASE — no price known — is shown as such instead of as a plausible
zero return.

The daily snapshot moves out of the read (a GET that mutated state, and
left a hole in the history on every day the user did not log in) into the
same nightly job. sync_run records every run so a job that has been failing
quietly is visible, and an admin can trigger one by hand to recover without
a redeploy. SourceResult<T> generalises PR 1's LookupResult for reuse by
the FX and tax work to come.

Deletes SixMarketDataClient and the unused /market-data endpoint.

Refs docs/DATENQUELLEN.md, ADR-007